# second-task

./: CMakeLists.txt  README.md  main.cpp  sum.cpp  sum.h
Zadanie2/: CMakeLists.txt  main.cpp  sum.cpp  sum.h
Zadanie2/finalz2/: z2
